Accept Android Studio suggestion to replace new Integer() with Integer.valueOf()
http://docs.oracle.com/javase/7/docs/api/java/lang/Integer.html#valueOf%28int%29